--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
     <span><a href="#">登录</a></span>
   </div>
 
-  <div class="nav">
+  <div class="nav clear">
     <img src="./img/mobile/skillLogo.png" alt="#" class="mobile_icon">
     <div class="nav_bar container">
       <ul>
         <li><a href="./src/co-opration.html">关于</a></li>
         <li><a href="#">推荐</a></li>
-        <li><a href="./src/jobs.html">职业</a></li>
+        <li><a href="#">职业</a></li>
         <li><a href="#">首页</a></li>
       </ul>
     </div>
     <div class="menu_bar" id="menu_bar">
       <img src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/menu.png" alt="">
     </div>
-    <div class="menu" id="menu">
-      <ul>
-        <li><a href="#">职业殿堂</a></li>
-        <li><a href="#">线上学习</a></li>
-        <li><a href="#">线下学习</a></li>
-        <li><a href="#">我的学院</a></li>
-        <li><a href="#">学习资料</a></li>
-        <li><a href="#">合作院校</a></li>
-      </ul>
-    </div>
+    
+  </div>
+  <div class="menu clear" id="menu">
+    <ul>
+      <li><a href="./src/jobs.html">职业殿堂</a></li>
+      <li><a href="#">线上学习</a></li>
+      <li><a href="#">线下学习</a></li>
+      <li><a href="#">我的学院</a></li>
+      <li><a href="#">学习资料</a></li>
+      <li><a href="#">合作院校</a></li>
+    </ul>
   </div>
 
-
-  <!-- <div class="carousel slide" id="carousel-example-generic" data-ride="carousel" data-interval="1500">
+  <div class="carousel slide" id="carousel-example-generic" data-ride="carousel" data-interval="1500">
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -74,7 +74,7 @@
     <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
-</div> -->
+  </div>
 
   <div class="main">
     <div class="advantage container">
@@ -126,6 +126,7 @@
             <div class="icon"></div>
             <div class="step">4</div>
             <div class="text">查看职业目标任务</div>
+            <div class="icon"></div>
           </div>
           <div class="process_2">
             <div class="step">5</div>
@@ -139,6 +140,7 @@
             <div class="icon"></div>
             <div class="step">8</div>
             <div class="text">完成职业技能，升级业界大牛</div>
+            <div class="icon"></div>
           </div>
         </div>
       </div>
