--- a/src/co-opration.html
+++ b/src/co-opration.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.bootcdn.net/ajax/libs/normalize/0/normalize.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/co-opration/base.css">
+  <link rel="stylesheet" media="(max-width: 768px)" href="../css/co-opration/mobile.css">
 </head>
 
 <body>
@@ -20,19 +21,39 @@
       </ul>
     </div>
   </div>
-  <div class="nav">
+  <div class="mobile_header">
+    <span><a href="#">注册</a></span>
+    <span><a href="#">登录</a></span>
+  </div>
+
+  <div class="nav clear">
+    <img src="../img/mobile/skillLogo.png" alt="#" class="mobile_icon">
     <div class="nav_bar container">
       <ul>
-        <li><a href="#">关于</a></li>
+        <li><a href="./src/co-opration.html">关于</a></li>
         <li><a href="#">推荐</a></li>
-        <li><a href="./jobs.html">职业</a></li>
-        <li><a href="../index.html">首页</a></li>
+        <li><a href="./src/jobs.html">职业</a></li>
+        <li><a href="#">首页</a></li>
       </ul>
     </div>
+    <div class="menu_bar" id="menu_bar">
+      <img src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/menu.png" alt="">
+    </div>
+    
+  </div>
+  <div class="menu clear" id="menu">
+    <ul>
+      <li><a href="./jobs.html">职业殿堂</a></li>
+      <li><a href="#">线上学习</a></li>
+      <li><a href="#">线下学习</a></li>
+      <li><a href="#">我的学院</a></li>
+      <li><a href="#">学习资料</a></li>
+      <li><a href="#">合作院校</a></li>
+    </ul>
   </div>
 
   <div class="banner">
-
+    <img src="../img/co-opration/banner.png" alt="">
   </div>
 
   <div class="main">
@@ -133,5 +154,10 @@
       <div class="copyright">Copyright © 2015技能树 www.jnshu.com  All Rights Reserved | 京ICP备13005880号</div>
     </div>
   </div>
+  
+  <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+
+  <script src="../js/index.js"></script>
+
 </body>
 </html>
